# ebpfkit

./: Cargo.toml
benches/: compile_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs
src/: assembler.rs  lib.rs  loader.rs
src/compiler/: codegen.rs  emit.rs  mod.rs  verify.rs
tests/: adversarial_tests.rs  break_it.rs  concurrent_tests.rs  core_detect_tests.rs  integration_tests.rs  property_tests.rs  regression_tests.rs  unit_tests.rs
tests/adversarial/: compiler.rs  io.rs  mod.rs  overflow.rs
tests/concurrent/: mod.rs  stress.rs
tests/integration/: mod.rs
tests/property/: compiler.rs
tests/regression/: mod.rs
tests/unit/: compiler.rs
