[package]
name = "ebpfkit"
version = "0.1.0"
edition = "2021"
authors = ["Corum Collective LLC <contact@santh.io>"]
rust-version = "1.85"
description = "Kernel-Space eBPF Just-In-Time Pipeline Filter Compiler"
license = "MIT"
repository = "https://github.com/santhsecurity/ebpfkit"
homepage = "https://github.com/santhsecurity/ebpfkit"
documentation = "https://docs.rs/ebpfkit"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["ebpf", "bpf", "jit", "kernel", "performance"]
categories = ["os", "algorithms"]

[dependencies]
libc = "0.2"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "compile_bench"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
